tests/invalid/syntax/if_no_condition.fig
// INVALID: if condition missing (no expression)
// Expected parse error: condition expression required
func bad(x: i32) -> ok
    if
        pass
